MYPLAN-2977 Fixed wrap issue in IE

--- a/myplan-web/src/main/webapp/themes/ksap/stylesheets/course/results.less
+++ b/myplan-web/src/main/webapp/themes/ksap/stylesheets/course/results.less
@@ -160,9 +160,8 @@ li.courseResults__facet--static:hover a {
     font-size: @fontSizeExtraLarge;
 }
 .courseResults__note {
-  font-size: 12px;
-  width: 430px;
-  float: left;
+    font-size: 11px;
+    line-height: 1.5em;
 }
 
 .courseResults .dataTables_length {
